[project]
name = "test-strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.97.0",
    "strands-agents>=1.0.0",
    "strands-agents-builder>=0.1.7",
    "strands-agents-tools>=0.2.1",
    "uvicorn>=0.35.0",
]
